added test for SchemaTableTree cache